5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1807_2563.log
== TEST (2019-06-06 15:57:05) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)>1):
	aprovados=0
	
	for i in vetor:
		if(vetor[i]>=5)and(vetor[i]<7):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)>1):
	aprovados=0
	
	for i in vetor:
		if((vetor[i]>=5)and(vetor[i]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:58:43) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)>1):
	aprovados=0
	
	for i in vetor :
		if((vetor[i]>=5)and(vetor[i]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:59:40) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)>1):
	aprovados=0
	
	for i in vetor:
		if((vetor[i]>=5)and(vetor[i]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:59:56) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for i in vetor:
		if((vetor[i]>=5)and(vetor[i]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:00:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for i in vetor:
		if((vetor[i] >= 5) and (vetor[i]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:01:57) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for i in vetor:
		if((vetor[i] >= 5) and (vetor[i]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:02:58) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j] >= 5) and (vetor[j]<7)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:04:53) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[i]>=5)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:31) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[i]>=5)):
			aprovados=aprovados+1
		else:
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
File "XXXX", line 12
    print(aprovados)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:45) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[i]>=5)):
			aprovados=aprovados+1
		else:
		
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
File "XXXX", line 13
    print(aprovados)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:56) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[i]>=5)):
			aprovados=aprovados+1
		else:
			aprovados=aprovados
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:08) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[j]>=5)):
			aprovados=aprovados+1
	
		print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:33) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[j]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:28:41) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[j]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:29:14) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor)+1!=1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[j]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:31:39) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor) != 1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[j]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:31:41) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor) != 1):
	aprovados=0
	
	for j in vetor:
		if((vetor[j]>7)and(vetor[j]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- EXECUTION TIME:
1.0471
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 9, in <module>
    if((vetor[j]>7)and(vetor[j]>=5)):
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:33:46) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor) != 1):
	aprovados=0
	
	for elemento in vetor:
		if((vetor[elemento]>7)and(vetor[elemento]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:34:09) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor) != 1):
	aprovados=0
	
	for elemento in vetor:
		if((vetor[elemento]<7)and(vetor[elemento]>=5)):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:41:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor) != 1):
	aprovados=0
	
	for elemento in vetor:
		if(elemento<7)and(elemento>=5):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:41:47) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor: ")))

while(size(vetor) != 1):
	aprovados=0
	
	for elemento in vetor:
		if(elemento<7)and(elemento>=5):
			aprovados=aprovados+1
	
	print(aprovados)
	
	vetor=array(eval(input("Vetor: ")))
-- EXECUTION TIME:
1.05742
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
